# MCR

./: .gitignore  AGENTS.md  AutorevisaoTracker.py  CommandCapture.py  DeterministicFiller.py  FeedbackFilter.py  Grimorio_MCR_Bridge.cs  Iniciar MCR Autonomo.bat  LEMBRETE.md  LICENCA_COMERCIAL.md  MANIFESTO_MCR.md  MCR.py  MCR_AGI.py  MCR_Chat.bat  MCR_Chat.py  MCR_PLAN.md  MasterAgent.py  PLANO_COMPLETO_SISTEMA.md  PLANO_EVOLUCAO_MCR.md  Pendencias.md  PipelineExecutor.py  README.md  RELATORIO_ARQUEOLOGICO.md  SUMMARY.md  TemplateExtractor.py  _scan_tools.py  alimentar_indexador.py  alimentar_mcr.py  alimentar_projeto.py  asset_discovery.py  batch_generator.py  benchmark_ollama.py  benchmark_resultados.json  check_git.py  check_mk3.py  check_ollama.py  conexao_bridge.py  config_ollama.ps1  dbg_rag.py  dbg_rag2.py  (+134 more)
MCR_PORTAVEL/: .gitignore  AGENTS.md  AUDIT_COMPLETO_SISTEMA.md  LICENCA_COMERCIAL.md  LICENSE  MANIFESTO.json  MCR.py  PLANO_INCLUSAO_REAL.md  PLANO_MCR_FINAL.md  README.md  agente_mcr.py  pyproject.toml  requirements.txt  switch_model.bat  switch_model.ps1  testar_tool_calling.py  verificar_config.py  worklog.md
MCR_PORTAVEL/docs/: Filosofia MCR.md  MCR_IDENTITY.md  MCR_WHITEPAPER_EN.md  MCR_WHITEPAPER_PT.md  README.md  TROUBLESHOOTING.md
MCR_PORTAVEL/mcr/: __init__.py  acoplamento_hierarquico.py  agente_mcr_integrado.py  auto_curiosidade.py  bootstrap.py  bridge.py  bridge_api.py  cache_hierarquico.py  chain_of_verification.py  code_analyzer.py  code_parser.py  conexao.py  coupling_MCRCoupling.json  decisor.py  diagnostico.py  dialogue_trainer.py  mcr.py  (+36 more)
(+3778 files in other folders)
