[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "mcr-devia"
version = "2.0.0"
description = "MCR-DevIA: Sistema cognitivo de reconhecimento e geração"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Kheltz"}]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
include = ["mcr*", "devia*"]
